Implement discussion system with WebSocket support and AI agent interactions
- Added WebSocket functionality for real-time discussions, including connection management and message handling.
- Created components for the discussion page, chat interface, and topic input in the Next.js frontend.
- Developed backend services for managing discussions, agents, and facilitating the decision-making process using OpenAI.
- Introduced new models for agents, discussion sessions, and messages to structure the discussion flow.
- Enhanced UI with features for displaying agenda items, participant information, and real-time message updates.
- Updated prompts for AI agents to ensure effective participation in discussions.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,9 @@ PORT=8000
 # CORS Settings
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
+# OpenAI Settings
+OPENAI_API_KEY=your-openai-api-key-here
+
 # Database Settings (例)
 # DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
