Enhance context retrieval and integration features for discussion system
- Implemented a new ContextRetriever service to fetch background knowledge from Notion, Slack, and Atlassian using Dedalus Labs integration.
- Updated backend API routes to support context retrieval requests and provide available context sources.
- Enhanced the discussion engine to utilize retrieved context for improved decision-making during discussions.
- Added frontend components for displaying context information and managing MCP service configurations.
- Introduced custom hooks for context retrieval and integrated them into the topic input component for seamless user experience.
- Updated documentation to reflect new features and integration guidelines.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,29 @@ CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 # OpenAI Settings
 OPENAI_API_KEY=your-openai-api-key-here
 
+# Dedalus Labs Settings
+# https://dedaluslabs.ai から取得したAPIキー
+DEDALUS_API_KEY=your-dedalus-api-key-here
+
+# MCP Integration Settings
+# 背景知識取得を有効化するか
+ENABLE_CONTEXT_RETRIEVAL=True
+
+# Notion MCP Settings (オプション)
+# Notion統合を使用する場合に設定
+# NOTION_TOKEN=your-notion-integration-token
+
+# Slack MCP Settings (オプション)
+# Slack統合を使用する場合に設定
+# SLACK_BOT_TOKEN=your-slack-bot-token
+# SLACK_TEAM_ID=your-slack-team-id
+
+# Atlassian MCP Settings (オプション)
+# Jira/Confluence統合を使用する場合に設定
+# ATLASSIAN_EMAIL=your-email@example.com
+# ATLASSIAN_API_TOKEN=your-atlassian-api-token
+# ATLASSIAN_DOMAIN=your-domain.atlassian.net
+
 # Database Settings (例)
 # DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
